# ark-escrow

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
docs/: protocol.md
escrow/: Cargo.toml
escrow/src/: client.rs  contract.rs  delegate.rs  lib.rs  spend.rs  spend_store.rs
ruby-ext/: Cargo.toml  build.rs
ruby-ext/lib/: ark_escrow.rb
ruby-ext/src/: lib.rs
