[package]
name = "ark-escrow"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[dependencies]
ark-core = "0.8"
ark-grpc = { version = "0.8", default-features = false, features = ["tls-native-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
anyhow = "1"
bitcoin = { version = "0.32.7", features = ["base64", "rand", "serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
