[package]
name = "ark-escrow-ruby"
version = "0.1.0"
edition = "2024"
rust-version = "1.86"

[lib]
crate-type = ["cdylib"]

[dependencies]
ark-escrow = { path = "../escrow" }
ark-core = "0.8"
ark-grpc = { version = "0.8", default-features = false, features = ["tls-native-roots"] }
anyhow = "1"
bitcoin = { version = "0.32.7", features = ["base64", "rand", "serde"] }
magnus = { version = "0.8", features = ["rb-sys"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
